--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -27,10 +27,13 @@ body {
     padding: 1rem;
 }
 /*
-=============================================
-CENTRALIZA ELEMENTOS NA VERTICAL E HORIZONTAL
-=============================================
+===========
+GRID GERAL
+===========
 */
-.d-flex {
-    display: flex;
+
+.grid {
+    display: grid;
+    grid-template-columns: 250px 750px 300px;
+    gap: 2rem;
 }
