--- a/public/scss/variables/_variables.scss
+++ b/public/scss/variables/_variables.scss
@@ -1,5 +1,26 @@
-$primary-color: #12141C;
-$secondary-color-light: rgba(30, 31, 35, 1);
+$primary-color: #20273A;
+$secondary-color-light: #12141C;
 $text-color: #C0CDFA;
 $input-color: #020510;
+$link-color: #478DC9;
 
+
+
+
+
+@mixin input-style() {
+    width: 100%;
+    padding: 1rem;
+    border: transparent;
+    border-radius: 10px 0 0 10px;
+    outline: none;
+    background-color: $input-color;
+    color: $text-color;
+    font-size: 1.1rem;
+}
+
+@mixin link-style() {
+    text-decoration: none;
+    display: block;
+    color: $link-color;
+}
