--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,9 +27,6 @@
 #header .nav__form .input:focus {
   box-shadow: 0px 0px 0px 1px #C0CDFA;
 }
-#header .nav__form .input::placeholder {
-  color: #C0CDFA;
-}
 #header .nav__form .btn {
   color: #C0CDFA;
   background-color: #020510;
@@ -64,10 +61,36 @@ INFORMATIONS ABOUT THE PROFILE
   object-fit: cover;
 }
 
+/*
+==============================
+INFORMATIONS ABOUT THE POSTS
+==============================
+*/
+.posts__release {
+  background-color: #12141C;
+  padding: 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.posts__release input {
+  cursor: pointer;
+}
+
 .link {
   text-decoration: none;
   display: block;
   color: #478DC9;
+}
+
+.input {
+  width: 100%;
+  padding: 1rem;
+  border: transparent;
+  border-radius: 10px 10px 10px 10px;
+  outline: none;
+  background-color: #020510;
+  color: #C0CDFA;
+  font-size: 1.1rem;
 }
 
 * {
